fix: enhance btn style + align header size of query and patient view

--- a/packages/portal/assets/css/bootstrap-override.css
+++ b/packages/portal/assets/css/bootstrap-override.css
@@ -45,6 +45,17 @@ a:focus{
     color: #495057;
 }
 
+.btn {
+    letter-spacing: -.025rem;
+    text-transform: none;
+    box-shadow: 0 4px 6px rgba(50,50,93,.1), 0 1px 3px rgba(0,0,0,.08);
+}
+
+.btn:active, .btn:active:focus, .btn:active:hover, .btn:hover:not(.btn-icon-only) {
+    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+    transform: translateY(-0.5px);
+}
+
 .btn-block {
     display: block;
     width: 100%;
